--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
-    "express": "^4.15.2",
-    "grunt": "^1.0.1",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-cssmin": "^2.1.0",
-    "grunt-contrib-jshint": "^3.2.0",
+    "express": ">=4.20.0",
+    "grunt": ">=1.0.1",
+    "grunt-autoprefixer": ">=3.0.4",
+    "grunt-cli": ">=1.2.0",
+    "grunt-contrib-connect": ">=1.0.2",
+    "grunt-contrib-cssmin": ">=2.1.0",
+    "grunt-contrib-jshint": ">=3.2.0",
     "grunt-contrib-qunit": "~1.2.0",
-    "grunt-contrib-uglify": "^2.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^3.1.0",
-    "grunt-retire": "^1.0.7",
+    "grunt-contrib-uglify": ">=2.3.0",
+    "grunt-contrib-watch": ">=1.0.0",
+    "grunt-sass": ">=3.1.0",
+    "grunt-retire": ">=1.0.7",
     "grunt-zip": "~1.0.0",
-    "mustache": "^2.3.0",
-    "socket.io": "^4.5.3"
+    "mustache": ">=2.3.0",
+    "socket.io": ">=4.5.3"
   },
   "license": "MIT"
 }
