--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "node": ">=4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "express": ">=4.20.0",
-    "grunt": ">=1.0.1",
-    "grunt-autoprefixer": ">=3.0.4",
-    "grunt-cli": ">=1.2.0",
-    "grunt-contrib-connect": ">=1.0.2",
-    "grunt-contrib-cssmin": ">=2.1.0",
+    "grunt": ">=1.6.1",
+    "grunt-cli": ">=1.5.0",
+    "grunt-contrib-connect": ">=5.0.1",
+    "grunt-contrib-cssmin": ">=5.0.0",
     "grunt-contrib-jshint": ">=3.2.0",
-    "grunt-contrib-qunit": "~1.2.0",
-    "grunt-contrib-uglify": ">=2.3.0",
+    "grunt-contrib-qunit": ">=10.1.1",
+    "grunt-contrib-uglify": ">=5.2.2",
     "grunt-contrib-watch": ">=1.0.0",
+    "grunt-postcss": "^0.9.0",
     "grunt-sass": ">=3.1.0",
-    "grunt-retire": ">=1.0.7",
-    "grunt-zip": "~1.0.0",
-    "mustache": ">=2.3.0",
+    "grunt-zip": ">=1.0.0",
+    "mustache": ">=4.2.0",
     "socket.io": ">=4.5.3"
   },
   "license": "MIT"
