--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "subdomain": "revealjs",
   "main": "js/reveal.js",
   "scripts": {
-    "test": "grunt test",
-    "start": "grunt serve",
-    "build": "grunt"
+    "test": "gulp js",
+    "start": "gulp serve",
+    "build": "gulp"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -24,19 +24,17 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.6",
     "express": ">=4.20.0",
-    "grunt": ">=1.6.1",
-    "grunt-cli": ">=1.5.0",
-    "grunt-contrib-connect": ">=5.0.1",
-    "grunt-contrib-cssmin": ">=5.0.0",
-    "grunt-contrib-jshint": ">=3.2.0",
-    "grunt-contrib-qunit": ">=10.1.1",
-    "grunt-contrib-uglify": ">=5.2.2",
-    "grunt-contrib-watch": ">=1.0.0",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": ">=3.1.0",
-    "grunt-zip": ">=1.0.0",
+    "gulp": "^5.0.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-postcss": "^10.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^6.0.0",
     "mustache": ">=4.2.0",
+    "sass": "^1.80.4",
     "socket.io": ">=4.5.3"
   },
   "license": "MIT"
